crates/promt/tests/snapshots/compile_snapshots__assistant_none.snap
---
source: crates/promt/tests/compile_snapshots.rs
expression: compiled.full_system_text
---
## Identity
You are Pioneer, a personal assistant agent.
